@@ -1,4 +1,4 @@
 $Id$
 
 This file is no longer maintained, please use the ticket reports:
-http://sourceforge.net/apps/trac/smartmontools/report
+http://www.smartmontools.org/report
