@@ -1,4 +1,4 @@
 $Id$
 
 This file is no longer maintained, please see:
-http://sourceforge.net/apps/trac/smartmontools/wiki/Warnings
+http://www.smartmontools.org/wiki/Warnings
